--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,40 @@ header img{
     color: #3281AF;
 }
 
+/*essa parte vai ser criada estilos pra padronizar a estilizaçao do sistema*/
+.pos{
+    display: flex;
+    flex-direction: column;
+    margin: 10px auto;
+    width: 90%;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
+.pos button{
+    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+    border: 0.1px solid #A9A9A9;
+    background-color: #3281AF;
+    color: white;
+    font-size: 15px;
+}
+
+.pos button:hover{
+    background-color: white;
+    color: #3281AF;
+}
+
+/*estilo de texto de aviso*/
+.texto-info{
+    text-align: center;
+    padding: 5px;
+    background-color: #A9A9A9;
+    width: 80%;
+    margin: 20px auto;
+    border-radius: 10px;
+}
 
 
 
