--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ header img{
 
 .captura p{
     font-size: 25px;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .captura input{
     margin-top: 10px;
@@ -84,7 +84,7 @@ header img{
     border: 0.1px solid #A9A9A9;
     background-color: #3281AF;
     color: white;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     box-shadow: #1C1C1C 1px 2px 3px 0px;
 }
 .captura button:hover{
@@ -182,22 +182,5 @@ header img{
     font-family: cursive;
     color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
