--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,12 @@ header img{
     margin-top: 10px;
     width: 70%;
     height: 30px;
-    font-size: 14px;
+    font-size: 12px;
     border:  solid 0.1px #A9A9A9;
     border-radius: 15px;
     color: #1C1C1C;
     padding: 5px;
-    text-align: center;
+    text-align: left;
 }
 
 .captura button{
@@ -152,7 +152,7 @@ header img{
     margin: 10px auto;
     width: 90%;
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .pos button{
@@ -163,6 +163,7 @@ header img{
     background-color: #3281AF;
     color: white;
     font-size: 15px;
+    box-shadow: #1C1C1C 1px 2px 3px 0px;
 }
 
 .pos button:hover{
@@ -182,5 +183,3 @@ header img{
     font-family: cursive;
     color: white;
 }
-
-
